RegressionTests/TestSuiteExport/accept/struct_types.blade
// EXPECT: pass

type PinConfig = struct {
    mode: nib,
    drive: nit,
    schmitt: bool,
};

cog task main() {
    cog var cfg: PinConfig = PinConfig { .mode = 0x5, .drive = 0b11, .schmitt = true };
}