RegressionTests/TestSuiteExport/reject/not_callable.blade
// EXPECT: fail
// DIAGNOSTICS: E0206

cog task main() {
    var x: u32 = 1;
    x();
}